compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_29.fir.kt
class Foo<T>

class Bar<T> {
    fun <S : T> takeFoo(foo: Foo<in S>) {}
}

class Inv<P>

interface A
interface B

fun <K : Inv<A>> main() {
    val foo = Foo<K>()
    Bar<Inv<B>>().<!INFERRED_TYPE_VARIABLE_INTO_EMPTY_INTERSECTION_WARNING!>takeFoo<!>(foo) // error in 1.3.72, no error in 1.4.31
}
